Ctrl+Sで反映ボタンを押した時と同じ扱いにした。説明文が長いサークルではレイアウトが崩れるので上限を設けた。

--- a/source/templates/base1.html
+++ b/source/templates/base1.html
@@ -55,6 +55,8 @@
     background-color:#EEE;
     border-left  :solid 1px black;
     border-bottom:solid 1px black;
+    max-height: 10em;
+    overflow-y: scroll;
   }
  </style>
  <div id="time"></div>
